Adicionando Dark mode e funcionalidade para contato com whatsapp

--- a/web/src/styles/pages/landing.css
+++ b/web/src/styles/pages/landing.css
@@ -2,10 +2,14 @@
     width: 100vw;
     height: 100vh;
     background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%);
-
+    
     display: flex;
     justify-content: center;
     align-items: center;
+}
+
+#page-landing.dark {
+    background: linear-gradient(315deg, #000000 0%, #130F40 74%);
 }
 
 #page-landing .content-wrapper {
@@ -15,7 +19,7 @@
     max-width: 1100px;
 
     height: 100%;
-    max-height: 680px;
+    max-height: 600px;
 
     display: flex;
     align-items: flex-start;
@@ -23,22 +27,20 @@
     justify-content: space-between;
 
     background: url('../../images/landing.svg') no-repeat 80% center;
+    background-size: contain;
 }
 
-#page-landing .content-wrapper main {
+#page-landing .content-wrapper main{
     max-width: 350px;
 }
 
-#page-landing .content-wrapper main h1 {
-    position: absolute;
-    top: 200px;
-    width: 350px;
+#page-landing .content-wrapper main h1{
     font-size: 76px;
     font-weight: 900;
     line-height: 70px;
 }
 
-#page-landing .content-wrapper main p {
+#page-landing .content-wrapper main p{
     margin-top: 40px;
     font-size: 24px;
     line-height: 34px;
@@ -48,17 +50,15 @@
     position: absolute;
     right: 0;
     top: 0;
-
+    
     font-size: 24px;
     line-height: 34px;
-
     display: flex;
     flex-direction: column;
-
     text-align: right;
 }
 
-.content-wrapper .location strong {
+.content-wrapper .location strong{
     font-weight: 800;
 }
 
@@ -66,19 +66,53 @@
     position: absolute;
     right: 0;
     bottom: 0;
-
+    
     width: 80px;
     height: 80px;
-    background: #ffd666;
+    background: #E89D05;
     border-radius: 30px;
-
+    
     display: flex;
     align-items: center;
     justify-content: center;
 
-    transition: background-color 0.2s;
+    transition: background-color .2s;
+}
+.content-wrapper .enter-app:hover {
+    background: #F9AE16;
 }
 
-.content-wrapper .enter-app:hover {
-    background: #96FEFF;
+@media (max-width: 700px) {
+    #page-landing .location {
+        transform: translate(50%, 50%);
+        right: 50%;
+        text-align: center;
+    }
+
+    #page-landing .location button {
+        margin: 0 auto;
+    }
+
+    #page-landing .logoImg {
+        display: none;
+    }
+
+    #page-landing .content-wrapper {
+        justify-content: center;
+        padding: 0 15px;
+        background: none;
+    }
+
+    #page-landing .content-wrapper main h1 {
+        font-size: 46px;
+        line-height: 42px;
+    }
+
+    #page-landing .content-wrapper main p {
+        margin-top: 15px;
+    }
+
+    #page-landing .content-wrapper .enter-app {
+        right: 15px;
+    }
 }
