--- a/web/src/styles/components/sidebar.css
+++ b/web/src/styles/components/sidebar.css
@@ -1,9 +1,8 @@
-
 aside.app-sidebar {
     position: fixed;
     height: 100%;
     padding: 32px 24px;
-    background: linear-gradient(329.54deg, #15B6D6 0%, #15D6D6 100%);
+    background: linear-gradient(329.54deg, #29B6D1 0%, #00C7C7 100%);
   
     display: flex;
     flex-direction: column;
@@ -11,18 +10,22 @@ aside.app-sidebar {
     align-items: center;
   }
   
-aside.app-sidebar img {
+  aside.app-sidebar.dark {
+    background: linear-gradient(329.54deg, #000000 0%, #130F40 100%);
+  }
+  
+  aside.app-sidebar img {
     width: 48px;
   }
   
-aside.app-sidebar footer a,
-aside.app-sidebar footer button {
+  aside.app-sidebar footer a,
+  aside.app-sidebar footer button.goBack {
     width: 48px;
     height: 48px;
   
     border: 0;
   
-    background: #12AFCB;
+    background: #E89D05;
     border-radius: 16px;
   
     cursor: pointer;
@@ -34,7 +37,31 @@ aside.app-sidebar footer button {
     align-items: center;
   }
   
-aside.app-sidebar footer a:hover,
-aside.app-sidebar footer button:hover {
-    background: #17D6EB;
+  aside.app-sidebar footer a:hover,
+  aside.app-sidebar footer button:hover {
+    background: #F9AE16;
+  }
+  
+  aside.app-sidebar .icons {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    height: 110px;
+  }
+  
+  aside.app-sidebar .icons button, .inactive {
+    width: 48px;
+    height: 48px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-radius: 16px;
+    border: none;
+    background: #12AFCB;
+    cursor: pointer;
+  }
+  
+  aside.app-sidebar .icons button.active {
+    background-color: #FFD666;
+    cursor: pointer;
   }
