Adicionando gif, removendo imagens do upload

--- a/web/src/styles/components/sidebar.css
+++ b/web/src/styles/components/sidebar.css
@@ -11,7 +11,7 @@ aside.app-sidebar {
   }
   
   aside.app-sidebar.dark {
-    background: linear-gradient(329.54deg, #000000 0%, #130F40 100%);
+    background: linear-gradient(329.54deg, #000000 0%, #02527e 75%);
   }
   
   aside.app-sidebar img {
