--- a/web/src/styles/pages/landing.css
+++ b/web/src/styles/pages/landing.css
@@ -9,7 +9,7 @@
 }
 
 #page-landing.dark {
-    background: linear-gradient(315deg, #000000 0%, #130F40 74%);
+    background: linear-gradient(315deg, #000000 0%, #02527e 75%);
 }
 
 #page-landing .content-wrapper {
