--- a/web/src/styles/pages/orphanages-map.css
+++ b/web/src/styles/pages/orphanages-map.css
@@ -17,7 +17,7 @@
 }
 
 #page-map.dark aside{
-    background: linear-gradient(315deg, #000000 0%, #130F40 74%);
+    background: linear-gradient(315deg, #000000 0%, #02527e 75%);
 }
 
 #page-map aside h2 {
